# Astolfo

./: .gitignore  CONTRIBUTING.md  LICENSE  Pipfile  README.md  TODO.md  app_config.json  astolfo.py  client.py  config.ini  funimation_presence.py  logging_config.json  notes.md  pyproject.toml  requirements.txt  reversing.py  run.py  service.py  todo.md
apps/: crunchyroll.py  funimation.py  netflix.py  virtualbox.py  vlc.py  vmware.py  wmp.py
astolfo/: app.py  manager.py
astolfo/agnostic_apps/: vmware.py
astolfo/windows_apps/: crunchyroll.py  funimation.py  netflix.py  wmp.py
installer/: Astolfo.spec  file_version_info.txt
